# stack-server

./: Cargo.toml  LICENSE-MIT  README.md  index.scss  justfile  package.json  prod.sh  run.sh  start.sh
backend/: Cargo.toml  LICENSE_MIT
backend/src/: lib.rs  main.rs
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/public/: stack_wasm_bg.wasm
frontend/src/: App.svelte  WithWasm.svelte  global.d.ts
frontend/src/lib/: chars.ts
frontend/src/routes/: +page.svelte
src/: app.rs  editor.rs  lib.rs  main.rs  shiftable_key.rs
src/lib/: chars.ts
