[package]
name = "stack-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.1"
stack-core = { git = "https://github.com/vandesm14/stack.git" }
stack-std = { git = "https://github.com/vandesm14/stack.git" }
