[package]
name = "stack-server"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sycamore = "0.8.2"
wasm-bindgen = "0.2.92"
yew = { version="0.20", features=["csr"] }
yew-hooks = "0.2.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'Storage'
]

[dependencies.stack-core]
git = "https://github.com/vandesm14/stack"